# janet

./: .gitattributes  .gitignore  .travis.yml  .ycm_extra_conf.py  2  3  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  appveyor.yml  array.c  array.h  buffer.c  buffer.h  build.bat  build.zig  build.zig.zon  build_win.bat  compile.c  compile.h  datatypes.h  dict.c  dict.h  disasm.c  disasm.h  ds.c  ds.h  gc.c  gc.h  gst.h  interp  janet-installer.nsi  janet.1  janet.nsi  janet_win.rc  jpm  (+33 more)
.builds/: .freebsd.yaml  .openbsd.yaml  epoll.yml  freebsd.yml  linux.yml  meson.yml  meson_min.yml  openbsd.yaml  openbsd.yml  prf_meson.yml
.circleci/: config.yml
.github/cosmo/: build  recipe.mk  setup
.github/workflows/: codeql.yml  release.yml  test.yml
auxbin/: jpm
auxlib/: cook.janet  path.janet
clibs/: compile.c  parse.c  stl.c
client/: main.c
cmake/: bin2h.cmake  dstmainclientinit.cmake  dststlbootstrap.cmake  genboot.cmake  gencore.cmake  geninit.cmake
core/: abstract.c  array.c  asm.c  bootstrap.h  bootstrap_parse.c  buffer.c  cache.c  cache.h  capi.c  client.c  compile.c  compile.h  compile_slotpool.c  compile_specials.c  context.c  deserialize.c  dict.c  disasm.c  ds.c  env.c  fiber.c  func.c  gc.c  gc.h  ids.c  internal.h  io.c  math.c  module.c  native.c  opcodes.h  parse.c  serialize.c  sourcemap.c  sourcemap.h  stl.c  string.c  stringcache.c  stringcache.h  strings.c  (+17 more)
ctest/: array_test.c  buffer_test.c  number_test.c  system_test.c  table_test.c
doc/: Home.md  Introduction.md  Loop.md  Parser.md  Peg.md  SQLite.md  Specials.md  The-Janet-Abstract-Machine-Bytecode.md  bytecode.md  gendoc.janet  intro.md
dsts/: example.dsts  minimal.dsts
dsttest/: basic.dst  example.dsts  suite0.dst  test.dst
examples/: 3sum.dst  3sum.janet  abstract-unix-socket.janet  assembly.dst  assembly.janet  async-execute.janet  channel.janet  chatserver.janet  classes.janet  colors.janet  debug.janet  debugger.janet  echoclient.janet  echoserve.janet  error.dst  error.janet  evlocks.janet  evsleep.janet  filewatch.janet  fizzbuzz.dst  fizzbuzz.janet  frequencies.dst  hello.dst  iterate-fiber.janet  iterators.dst  lazyseqs.dst  lazyseqs.janet  life.janet  lineloop.janet  marshal-stress.janet  maxtriangle.dst  maxtriangle.janet  newiter.janet  posix-exec.janet  primes.dst  primes.janet  rtest.janet  select.janet  select2.janet  sigaction.janet  (+11 more)
examples/ffi/: gtk.janet  so.c  test.janet  win32.janet
examples/jitfn/: hello.nasm  jitfn.janet
examples/numarray/: build.janet  numarray.c  project.janet
examples/sample-bad-bundle/: badmod.janet
examples/sample-bad-bundle1/: info.jdn
examples/sample-bad-bundle2/: bundle.janet  info.jdn
examples/sample-bundle/: mymod.janet
examples/sample-bundle-aliases/: aliases-mod.janet  bundle.janet  info.jdn
examples/sample-dep1/: dep1.janet
examples/sample-dep2/: dep2.janet
examples/sysir/: arrays1.janet  arrays2.janet  basic1.janet  basic2.janet  drawing.janet  drawing2.janet  frontend.janet  hello.janet  run_drawing.sh  run_drawing2.sh  run_samples.bat  run_samples.sh  samples.janet  typeerr0.janet  typeerr1.janet  windows_samples.janet  x64.janet
extra/: metabuild.dst
ffitest/: gtk.janet  gtknew.janet  so.c  test.janet
grammar/: janet.tmLanguage  tmcorelib.janet
gsttests/: basic.dst  basic.gst
include/dst/: dst.h  dstconfig.h  dststate.h  dststl.h  dsttypes.h
include/gst/: compile.h  disasm.h  gst.h  parse.h  stl.h
junkyard/: array_test.c  asm_test.c  bootstrap.dst  client.c  ds.c  fiber_test.c  strtod_test.c
lib/: colors.dst  colors.janet  fizzbuzz.dst  lazyseqs.dst  lazyseqs.janet  match.janet  metabuild.dst  pp.dst  primes.dst
libs/: compile.gst  hello.gst  parse.gst  pp.gst  repl.gst  sample.dsts  serialize.gst  stl.gst  testlib.c  xxd.c
misc/completion/: README.md  janet.bash  janet.fish  janet.zsh
natives/hello/: .gitignore  CMakeLists.txt  Makefile  build.bat  main.c  metab.dst
natives/json/: Makefile  build.janet  build_win.bat  json.c
natives/sqlite3/: .gitignore  CMakeLists.txt  Makefile  main.c
src/: exported.list  main.zig
src/assembler/: asm.c
src/boot/: array_test.c  boot.c  boot.janet  buffer_test.c  number_test.c  system_test.c  table_test.c  tests.h
src/compiler/: boot.dst  cfuns.c  compile.c  compile.h  compile_specials.c  context.c  emit.c  emit.h  regalloc.c  regalloc.h  run.c  specials.c  stl.c
src/conf/: janetconf.h
src/core/: abstract.c  array.c  asm.c  ast.c  bigint.c  boot.dst  buffer.c  bytecode.c  capi.c  cfuns.c  compile.c  compile.h  core.dst  core.janet  corelib.c  corelib.h  debug.c  emit.c  emit.h  ev.c  features.h  ffi.c  fiber.c  fiber.h  filewatch.c  gc.c  gc.h  inttypes.c  io.c  marsh.c  math.c  multisym.c  native.c  net.c  os.c  os.c.orig  os.h  parse.c  peg.c  pp.c  (+27 more)
src/include/: janet.h  janetconf.h
src/jpm/: cc.janet  cli.janet  jpm  (+8 more)
test/: boot.dst  helper.dst  helper.janet  minimal.dsts  repl.dst  scratch.dst  suite-array.janet  suite-asm.janet  suite-boot.janet  suite-buffer.janet  suite-bundle.janet  suite-capi.janet  suite-cfuns.janet  suite-compile.janet  suite-corelib.janet  suite-debug.janet  suite-doc.janet  suite-ev.janet  suite-ev2.janet  suite-ffi.janet  suite-filewatch.janet  suite-inttypes.janet  suite-io.janet  suite-marsh.janet  suite-math.janet  suite-net.janet  suite-os.janet  suite-parse.janet  suite-peg.janet  suite-pp.janet  suite-specials.janet  suite-string.janet  suite-strtod.janet  suite-struct.janet  suite-symcache.janet  suite-sysir.janet  suite-table.janet  suite-tuple.janet  suite-unknown.janet  suite-value.janet  (+31 more)
tools/: EnvVarUpdate.nsh  FileAssociation.nsh  amalg.janet  bars.janet  cook.janet  format.sh  gendoc.janet  highlight.janet  jpm  jpm.bat  marshal_core.janet  patch-header.janet  patch-jpm.janet  removecr.janet  symcharsgen.c  tm_lang_gen.janet  tmcorelib.janet  update_copyright.janet  x64.sh  xxd.c
unittests/: array_test.c  asm_test.c  buffer_test.c  compile_test.c  fiber_test.c  nanbox_test.c  parse_test.c  sample.dsts  table_test.c  unit.h
web/: index.html
(+74 files in other folders)
